<resources>
    <string name="app_name">HappnissBillDemo</string>

    <string name="title_family">family</string>
    <string name="title_records">Records</string>
    <string name="title_user">My</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_main">HappnissBillDemo</string>
    <string name="title_select_members">Select Members</string>
    <string name="title_select_types">Select Types</string>
    <string name="title_select_start_date">Select Start Date</string>
    <string name="title_select_end_date">Select End Date</string>
    <string name="title_select_param">Select Parameters</string>
    <string name="title_ok">OK</string>
    <string name="title_cancel">Cancel</string>
    <string name="title_add_record">Add Record</string>
    <string name="title_join_family">Join Family</string>
    <string name="title_create_family">Create Family</string>
    <string name="title_unjoin_family">Unjoin Family</string>
    <string name="title_logout">Logout</string>
    <string name="title_add_type">Add Type</string>
    <string name="title_delete_member">Delete Member</string>
    <string name="title_software_update">Software Update</string>
    <string name="title_about">About</string>

    <string name="prompt_username">User Name</string>
    <string name="prompt_phonenumber">Phone Number</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_family">Family</string>
    <string name="prompt_parent">Parent</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_oldpassword">Old Password</string>
    <string name="prompt_newpassword">New Password</string>
    <string name="prompt_confirmpassword">Confirm Password</string>
    <string name="prompt_sum">Sum</string>
    <string name="prompt_all">All</string>
    <string name="prompt_amount">Amount</string>
    <string name="prompt_type">Type</string>
    <string name="prompt_comment">Comment</string>
    <string name="prompt_add_record_failed">Add Record Failed</string>
    <string name="prompt_add_record_succeed">Add Record Succeed</string>
    <string name="prompt_busy">Busy</string>
    <string name="prompt_income">Income</string>
    <string name="prompt_true">True</string>
    <string name="prompt_false">False</string>
    <string name="prompt_change_userinfo">Change</string>
    <string name="prompt_family_name">Family Name</string>
    <string name="prompt_family_code">Family Code</string>
    <string name="prompt_parent_name">Parent Name</string>
    <string name="prompt_family_members">Family Members</string>
    <string name="prompt_family_types">Family Types</string>
    <string name="prompt_new_software">New version software detected, update?</string>
    <string name="prompt_downloading">Downloading.......</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_select_members">Members</string>
    <string name="action_start_date">Start Date</string>
    <string name="action_end_date">End Date</string>
    <string name="action_add_record">Add Record</string>
    <string name="action_get_record">Get Record</string>

    <string name="error_invalid_username">This user name is invalid</string>
    <string name="error_invalid_phonenumber">This phone number is invalid</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_invalid_confirmpassword">This password is not same</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_register_failed">Register Failed</string>
    <string name="error_register_succeed">Register Succeed</string>
    <string name="error_login_failed">Login Failed</string>
    <string name="error_login_succeed">Login Succeed</string>
    <string name="error_change_user_info_succeed">Change User Info Succeed</string>
    <string name="error_change_user_info_failed">Change User Info Failed</string>
    <string name="error_get_family_failed">Get Family Info Failed</string>
    <string name="error_join_family_failed">Join Family Info Failed</string>
    <string name="error_create_family_failed">Create Family Info Failed</string>
    <string name="error_unjoin_family_failed">Unjoin Family Failed</string>
    <string name="error_add_type_failed">Add Type Failed</string>
    <string name="error_delete_member_failed">Delete Member Failed</string>
</resources>
