<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/text_margin"
        android:text="@string/title_select_param"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_member"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F0F0F0"
                android:padding="@dimen/text_margin"
                android:text="@string/title_select_members" />

            <ListView
                android:id="@+id/member_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/txt_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F0F0F0"
                android:padding="@dimen/text_margin"
                android:text="@string/title_select_types" />

            <ListView
                android:id="@+id/type_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/txt_start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F0F0F0"
                android:padding="@dimen/text_margin"
                android:text="@string/title_select_start_date" />


            <DatePicker
                android:id="@+id/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <TextView
                android:id="@+id/txt_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F0F0F0"
                android:padding="@dimen/text_margin"
                android:text="@string/title_select_end_date" />

            <DatePicker
                android:id="@+id/end_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_ok" />

        <Button
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_cancel" />

    </LinearLayout>

</LinearLayout>
